[tool.poetry]
name = "transpose-label"
version = "0.1.0"
description = ""
authors = ["jak <191585+jak@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tk = "^0.1.0"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
